# thinkyoureprivate.lol

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.cargo/: config.toml
assets/: index.html  styles.css
knot-resolver/: config.lua  config.yaml
src/: dns_query.rs  main.rs  ns.rs  tor_bulk_exit_list.rs  web.rs
templates/: display-your-info.html
